kubernetes/app2-nodemongo/mongo-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: app2
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
