kubernetes/app2-nodemongo/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app2-node
  namespace: app2
spec:
  selector:
    app: app2-node
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
